# flam-assignment

./: .gitignore  COMPLETION_SUMMARY.md  FINAL_STATUS.md  GETTING_STARTED.md  INDEX.md  README.md  REFERENCE.md  SETUP_GUIDE.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/flam/: CameraPreview.kt  GLRenderer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
jni/: CMakeLists.txt  native-lib.cpp
web/: index.html  package.json  tsconfig.json
web/src/: main.ts
